--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="30">
-    <td><img src="image/Meet.png" alt="Meet Abhani's Profile Picture"></td>
+    <td><img src="Meet.png" alt="Meet Abhani's Profile Picture"></td>
     <td>
       <h1>Meet Abhani</h1>
       <p><em>Business Analyst at <strong><a href="https://www.sammonsfinancialgroup.com/">Sammons Financial Group</a></strong></em></p>
